Connected HTML Pages, Security Config no error, SpringBoot app running